--- a/public/views/list.ejs
+++ b/public/views/list.ejs
@@ -75,7 +75,7 @@
     <!-- main website content -->
     <main>
       <!-- hero banner -->
-      <section class="banner">
+      <!-- <section class="banner">
         <div class="hero is-bold is-medium">
           <div class="hero-body justify-content-center">
             <div class="container">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- discover currently -->
       <section class="discover">
         <% if (message && (message.length > 0)) { %>
@@ -101,17 +101,19 @@
           </div>
         <% } %>
         <div class="columns-header">
-          <h2>DISCOVER</h2>
-          <p>four locations from around the world</p>
+          <h2>ALL LOCATIONS</h2>
+          <p>all locations in our data</p>
         </div>
-        <div class="columns">
+        <% if (data) { %>
+        <div class="d-flex entries">
           <!-- trip 1 -->
-          <div class="column discover-entry">
-            <% if (data && data[0].location) { %>
-              <a href="<%='trip/get/' + data[0].tripID%>">
-                <div class="discover-image is-16by9" style="background: url(<%=data[0].img%>);">
+          <% for (var i = 0; i < data.length; i++) { %>
+          <div class="entry-data discover-entry">
+            <% if (data[i].location) { %>
+              <a href="<%='trip/get/' + data[i].tripID%>">
+                <div class="discover-image is-16by9" style="background: url(<%=data[i].img%>);">
                   <div class="discover-caption">
-                    <h4><%=data[0].location%></h4>
+                    <h4><%=data[i].location%></h4>
                   </div>
                 </div>
               </a>
@@ -124,64 +126,9 @@
               </div>
             <% } %>
           </div>
-          <!-- trip 2 -->
-          <div class="column discover-entry">
-            <% if (data && data[1].location) { %>
-              <a href="<%='trip/get/' + data[1].tripID%>">
-                <div class="discover-image" style="background: url(<%=data[1].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[1].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-          <!-- trip 3 -->
-          <div class="column discover-entry">
-            <% if (data && data[2].location) { %>
-              <a href="<%='trip/get/' + data[2].tripID%>">
-                <div class="discover-image" style="background: url(<%=data[2].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[2].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
-          <!-- trip 4 -->
-          <div class="column discover-entry">
-            <% if (data && data[3].location) { %>
-              <a href="<%='trip/get/' + data[3].tripID%>">
-                <div class="discover-image" style="background: url(<%=data[3].img%>);">
-                  <div class="discover-caption">
-                    <h4><%=data[3].location%></h4>
-                  </div>
-                </div>
-              </a>
-            <% } else { %>
-              <!-- blank filler -->
-              <div class="discover-image empty"></i>
-                <div class="discover-caption">
-                  <h4>none</h4>
-                </div>
-              </div>
-            <% } %>
-          </div>
+          <% } %>
         </div>
+        <% } %>
       </section>
       <!--  new section -->
       <section>
