--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -32,30 +32,31 @@
       </div>
     
       <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item" href="/trip/random">
-            Random
-          </a>
-          <a class="navbar-item">
-            Create
-          </a>
-        </div>
-        <div class="navbar-end">
-          <a class="navbar-item">
-            My Account
-          </a>
-          <div class="navbar-item">
-            <div class="buttons">
-              <a class="button is-light" href="/signup">
-                Sign up
-              </a>
-              <a class="button is-inverted" href="/login">
-                Log in
-              </a>
+          <div class="navbar-start">
+            <a class="navbar-item" href="/trip/all">
+              View All&nbsp;&nbsp;<i class="fas fa-globe-americas"></i>
+            </a>
+            <a class="navbar-item" href="/trip/random">
+              Random&nbsp;&nbsp;<i class="fas fa-random"></i>
+            </a>
+            <a class="navbar-item" href="/create">
+              Create&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
+            </a>
+          </div>
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="buttons">
+                <!-- display sign up / log in unless we already have a user -->
+                  <a class="button is-light" href="/signup">
+                    Sign up&nbsp;&nbsp;<i class="fas fa-user-shield"></i>
+                  </a>
+                  <a class="button is-inverted" href="/login">
+                    Log in&nbsp;&nbsp;<i class="fas fa-key"></i>
+                  </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </nav>
     <!-- main website content -->
     <main>
