--- a/public/views/trip.ejs
+++ b/public/views/trip.ejs
@@ -33,10 +33,13 @@
     
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
+          <a class="navbar-item" href="/trip/all">
+            View All
+          </a>
           <a class="navbar-item" href="/trip/random">
             Random
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="/create">
             Create
           </a>
         </div>
