--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -42,6 +42,9 @@
             <a class="navbar-item" href="/create">
               Create&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
             </a>
+            <a class="navbar-item" href="/search">
+              Search&nbsp;&nbsp;<i class="fas fa-search"></i>
+            </a>
           </div>
           <div class="navbar-end">
             <a class="navbar-item">
@@ -80,7 +83,7 @@
           <div class="hero-body justify-content-center">
             <div class="container">
               <h1 class="title">
-                CREATE
+                CREATE Entry
               </h1>
               <h3 class="subtitle">
                 Create a new location here!
