--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -42,6 +42,9 @@
             <a class="navbar-item" href="/create">
               Create&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
             </a>
+            <a class="navbar-item" href="/search">
+              Search&nbsp;&nbsp;<i class="fas fa-search"></i>
+            </a>
           </div>
           <div class="navbar-end">
             <div class="navbar-item">
@@ -60,9 +63,21 @@
     </nav>
     <!-- main website content -->
     <main>
+        <section class="banner">
+            <div class="hero is-bold is-medium">
+              <div class="hero-body justify-content-center">
+                <div class="container">
+                  <h1 class="title">
+                    Member Login
+                  </h1>
+                  <h3 class="subtitle">
+                    Sign in here!
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </section>
       <div class="form-wrapper">
-        <h3>TravelBook</h3>
-        <p>Log in here</p>
         <hr>
         <form action="/account/login" method="post" onSubmit="">
           <!-- <div class="field">
