--- a/public/views/list.ejs
+++ b/public/views/list.ejs
@@ -42,6 +42,9 @@
             <a class="navbar-item" href="/create">
               Create&nbsp;&nbsp;<i class="fas fa-plus-circle"></i>
             </a>
+            <a class="navbar-item" href="/search">
+              Search&nbsp;&nbsp;<i class="fas fa-search"></i>
+            </a>
           </div>
           <div class="navbar-end">
             <a class="navbar-item">
