--- a/public/views/list.ejs
+++ b/public/views/list.ejs
@@ -107,7 +107,8 @@
           <h2>ALL LOCATIONS</h2>
           <p>all locations in our data</p>
         </div>
-        <% if (data && (data.length > 0)) { %>
+        <% if (data) { %>
+        <% if (data.length > 0) { %>
         <div class="d-flex entries">
           <!-- trip 1 -->
           <% for (var i = 0; i < data.length; i++) { %>
@@ -131,6 +132,7 @@
           </div>
           <% } %>
         </div>
+        <% } %>
         <% } %>
       </section>
       <!--  new section -->
