--- a/public/views/trip.ejs
+++ b/public/views/trip.ejs
@@ -83,24 +83,30 @@
           <div class="hero-body justify-content-center">
             <div class="container">
               <h1 class="title">
-                <% if (data && data[0] && data[0].location) { %>
+                <% if (data) { %>
+                  <% if (data[0]) { %>
+                    <% if (data[0].location) { %>
                   <%=data[0].location.toUpperCase()%>
-                <%}%>
+                <%}}}%>
               </h1>
               <h3 class="subtitle"  style="margin-bottom: 3rem">
-                <% if (data && data[0] && data[0].keywords) { %>
+                <% if (data) { %>
+                  <% if (data[0]) { %>
+                    <% if (data[0].keywords) { %>
                   <div class="tags">
                   <% data[0].keywords.forEach((k) => { %>
                     <span class="keyword tag is-link is-medium is-light is-font-3"><%=k%></span>
                   <% })%>
                   </div>
-                <%}%>
+                <%}}}%>
               </h3>
               <!-- location rating -->
               <div class="rating-wrapper">
                 <% if (data) { %>
+                  <% if (data[0]) { %>
+                    <% if (data[0].ratings) { %>
                   <h4 style="margin-bottom: .25rem; margin-top: .25rem;">Rating (avg: <%=((data[0].ratings.reduce((x, y) => x + y, 0))/Math.max(1, data[0].ratings.length)).toFixed(2)%> ⭐)</h4>
-                <% } %>
+                <% }}} %>
                 <form action="<%='/trip/average/'+data[0].tripID+'/'%>" method="post" onSubmit="">
                   <div class="rating-control columns">
                     <% for (var i = 1; i < 6; i++) { %>
@@ -154,6 +160,8 @@
               <td class="table-title">Visited</td>
             </tr>
             <% if (data) { %>
+              <% if (data[0]) { %>
+                <% if (data[0].places) { %>
               <% for (var i = 0; i < data[0].places.length; i++) { %>
               <% var val = data[0].places[i]; %>
               <tr>
@@ -173,7 +181,7 @@
                   </label>
                 </td>
               </tr>
-           <% }} %>
+           <% }}}} %>
           </table>
           <div class="field is-grouped">
             <div class="control" style="margin: 0 auto; margin-bottom: 1.5rem;">
