fix last html routing

--- a/public/views/trip.ejs
+++ b/public/views/trip.ejs
@@ -168,13 +168,13 @@
                 <td class="table-entry"><%=val.name%></td>
                 <td class="table-entry"><%=val.category%></td>
                 <td class="table-entry"><%=val.price%></td>
-                <td class="table-entry"><div class="tooltip"><%=val.interested.length%><span class="tooltiptext"><u>Interested</u>: <%=val.interested%></span></div>&nbsp;&nbsp;&nbsp;
+                <td class="table-entry"><div class="tooltip"><%=val.interested.length%><span class="tooltiptext"><u>Interested</u>: <%=val.interested%></span></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <label class="checkbox">
                     <input type="hidden" name="<%='interested[' + i + ']'%>" value="_">
                     <input type="checkbox" name="<%='interested[' + i + ']'%>">
                   </label>
                 </td>
-                <td class="table-entry"><div class="tooltip"><%=val.visited.length%><span class="tooltiptext"><u>Visited</u>: <%=val.visited%></span>&nbsp;&nbsp;&nbsp;
+                <td class="table-entry"><div class="tooltip"><%=val.visited.length%>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <label class="checkbox">
                     <input type="hidden" name="<%='visited[' + i + ']'%>" value="_">
                     <input type="checkbox" name="<%='visited[' + i + ']'%>">
